Bug 37401 - EDITING with Gradient Tool: border between colors does not follow related control point movings
Summary: EDITING with Gradient Tool: border between colors does not follow related con...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
3.4.0 Beta5
Hardware: All All
: medium trivial
Assignee: Not Assigned
URL:
Whiteboard: color_handling target:4.4.0 target:4....
Keywords: difficultyInteresting, easyHack, skillCpp, skillDebug, topicUI
Depends on:
Blocks:
 
Reported: 2011-05-20 04:57 UTC by sasha.libreoffice
Modified: 2016-02-18 16:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
explanations of gradient tool bugs (77.30 KB, application/vnd.oasis.opendocument.graphics)
2011-05-20 04:57 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sasha.libreoffice 2011-05-20 04:57:29 UTC
Created attachment 46947 [details]
explanations of gradient tool bugs

LibreOffice Draw has an interesting and useful tool "Gradients". It works almost well, but has few bugs. In attachment are explanations of this.

This bug was reproduced on Libreoffice 3.3.2 and 3.4.beta5 on Mandriva 64 bit and Windows XP 32 bit
Comment 1 Rainer Bielefeld Retired 2011-05-20 07:02:41 UTC
To be honest, I never used or even saw the "Gradient tool" before, so I am not sure what it should do or not. But indeed, reactions are unexpected, also with "LibreOffice 3.4.0RC1  – WIN7  Home Premium  (64bit) German UI [OOO340m1 (Build:11)]".

I can NOT confirm reporter's first effect from gradient-tool-problem.odg "gradient changes size even if mouse not dragged"

I CAN confirm that reactions are unexpected, for example
1. open reporter's sample document
2. click rectangle with small green area on first page 
3. context Menu 'Area > Gradients', modify "Vorder" to 0%  <ok>
4. Select Gradient Tool from Drawing Toolbar / Effects
   You should see 2 control points, green one marking center of green area, 
   yellow one more or less at 50% green / yellow, line betweeen control point 
   approximately vertically on long green area diameter.
5. Click on yellow CP and try to move it (drag and drop) a very little 
   distance to the green CP. 
   Expected: CP will be moved few millimeters, green area bedomes a 
             little smaller
   Actual: yellow CP moves nearby to the center, green area diameter more 
           or less 0 (Border = 92%)
6. Try to resize green area be moving yellow CP to old position
   Unexpected: 50% green / eyllow does not follow yellow CP. green area keeps
               smaller than expected.

I am pretty sure that reporter's first unexpected observation has same roots, so we should handle the problem due to new subject line and see what happens

Further results coming soon!
Comment 2 Rainer Bielefeld Retired 2011-05-20 07:50:13 UTC
Border between colors does not follow full way control point, and even worse, CP does not follow full way mouse pointer.

Seems to be an old bug, Also see reporter's observation in OOo 3.1.1, but works in a perfect way with OOo 1.1.4
Comment 3 Björn Michaelsen 2011-11-22 12:07:42 UTC
EasyHackified. Unassign myself and CC myself.
Comment 4 Björn Michaelsen 2011-12-23 12:06:07 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 5 Björn Michaelsen 2011-12-23 12:57:23 UTC
An EasyHack should have been checked by developers and thus is confirmed regardless of age. Moving back to NEW from NEEDINFO again. Sorry for the hassle.
Comment 6 Florian Reisinger 2012-05-18 09:34:39 UTC
Deleted "Easyhack" from summary.
Comment 7 Björn Michaelsen 2013-10-04 18:47:00 UTC
adding LibreOffice developer list as CC to unresolved EasyHacks for better visibility.

see e.g. http://nabble.documentfoundation.org/minutes-of-ESC-call-td4076214.html for details
Comment 8 Commit Notification 2014-06-25 12:04:13 UTC
Hideki Ikeda committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=03675ab4a8994cb7000fd738d1685720c8b9e584

fdo#37401 - fixed the old vector length



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2014-06-25 12:12:51 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ef16d765306c932c49254f295f57e5853129c1ea

Related: fdo#37401 adjust fix to original aCenter use



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2014-06-25 12:15:32 UTC
Hideki Ikeda committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=383135d77867d0f2c05b4c807eb17b099604eaa1&h=libreoffice-4-3

fdo#37401 - fixed the old vector length


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-06-25 12:23:52 UTC
Hideki Ikeda committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=390dc4eb87637c99be37f29c630618c13ea1d0a0&h=libreoffice-4-2

fdo#37401 - fixed the old vector length


It will be available in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Robinson Tryon (qubit) 2015-12-15 23:24:33 UTC
Migrating Whiteboard tags to Keywords: (EasyHack DifficultyInteresting SkillCpp SkillDebug TopicUi )
[NinjaEdit]
Comment 13 Robinson Tryon (qubit) 2016-02-18 16:37:20 UTC
Remove LibreOffice Dev List from CC on EasyHacks
(curtailing excessive email to list)
[NinjaEdit]